# tinyrender

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build_web_host.sh  web_host.py
examples/: CMakeLists.txt
examples/TestScene/: CMakeLists.txt  main.cpp
examples/boat/: CMakeLists.txt  main.cpp
examples/minecraft/: CMakeLists.txt  main.cpp
include/tinyrender/: Fwd.hpp  Transform.hpp  engine.hpp
include/tinyrender/camera/: Camera.hpp  FreeviewCamera.hpp  TurntableCamera.hpp
include/tinyrender/objects/: Cube.hpp  Geometry.hpp  Mesh.hpp  Object.hpp  Voxels.hpp  WaveSim.hpp
include/tinyrender/objects/voxel/: Chunk.hpp  ChunkGeometry.hpp
resources/shaders/: basic_mvp.wgsl  basic_mvp_color.wgsl  basic_mvp_texture.wgsl  voxels.wgsl  waves.wgsl
resources/shaders/old/: basic.wgsl  basic_2.wgsl  basic_unif.wgsl
src/: CMakeLists.txt  EngineImpl.cpp  EngineImpl.hpp  State.hpp  engine.cpp  engine.hpp  implementations.cpp  load_shader.hpp  main.cpp  main_boat.cpp  shape_helpers.cpp  shape_helpers.hpp  shape_helpers_test.cpp  wgpu_helpers.hpp
src/camera/: Camera.hpp  CameraImpl.cpp  CameraImpl.hpp  FreeviewCamera.cpp  FreeviewCamera.hpp  FreeviewCameraImpl.cpp  FreeviewCameraImpl.hpp  TurntableCamera.cpp  TurntableCamera.hpp  TurntableCameraImpl.cpp  TurntableCameraImpl.hpp
src/controllers/: Controller.hpp  FreeviewController.cpp  FreeviewController.hpp  TurntableController.cpp  TurntableController.hpp
src/objects/: Cube.cpp  Cube.hpp  CubeImpl.cpp  CubeImpl.hpp  Geometry.cpp  Geometry.hpp  GeometryImpl.cpp  GeometryImpl.hpp  Mesh.cpp  Mesh.hpp  MeshImpl.cpp  MeshImpl.hpp  Object.cpp  Object.hpp  ObjectImpl.cpp  ObjectImpl.hpp  ObjectResources.cpp  ObjectResources.hpp  Voxels.cpp  Voxels.hpp  VoxelsImpl.cpp  VoxelsImpl.hpp  WaveSim.cpp  WaveSim.hpp  WaveSimImpl.cpp  WaveSimImpl.hpp
src/objects/loaders/: Obj.cpp  Obj.hpp  Polygons.hpp  Shapes.cpp  Shapes.hpp  obj.cpp  obj.hpp
src/objects/voxel/: BuildMesh.cpp  BuildMesh.hpp  BuildMeshQueue.cpp  BuildMeshQueue.hpp  Chunk.cpp  Chunk.hpp  ChunkGeometry.cpp  ChunkGeometry.hpp  ChunkImpl.cpp  ChunkImpl.hpp  Chunks.cpp  Chunks.hpp  Mesh.cpp  Mesh.hpp  VoxelData.cpp  VoxelData.hpp
src/objects/wavesim/: FFTfftw.cpp  FFTfftw.hpp  FFTopencv.cpp  FFTopencv.hpp  naive.cpp  naive.hpp
src/pipelines/: IndexedTrianglePipeline.cpp  IndexedTrianglePipeline.hpp  Pipeline.hpp  TexturedTrianglePipeline.cpp  TexturedTrianglePipeline.hpp  TrianglePipeline.cpp  TrianglePipeline.hpp
src/primitives/buffers/: AttributeBuffer.hpp  Buffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  IndexedAttributeBuffer.cpp  IndexedAttributeBuffer.hpp  NonTexturedAttributeBuffer.cpp  NonTexturedAttributeBuffer.hpp  TexturedAttributeBuffer.cpp  TexturedAttributeBuffer.hpp  UniformModelBuffer.cpp  UniformModelBuffer.hpp  UniformViewProjectionBuffer.cpp  UniformViewProjectionBuffer.hpp
src/primitives/buffers/attributes/: IndexedAttribute.cpp  IndexedAttribute.hpp  TexturedAttribute.cpp  TexturedAttribute.hpp
src/primitives/buffers/uniforms/: UniformModel.hpp  UniformViewProjection.cpp  UniformViewProjection.hpp
src/primitives/textures/: DebugTexture2D.cpp  DebugTexture2D.hpp  DepthTexture2D.cpp  DepthTexture2D.hpp  ImageTexture2D.cpp  ImageTexture2D.hpp  Texture2D.cpp  Texture2D.hpp
src/shaders/: basic_mvp_color.wgsl  basic_mvp_texture.wgsl  voxels.wgsl  waves.wgsl
src/transform/: Transform.cpp
src/webgpu/: Context.cpp  Context.hpp  Scene.cpp  Scene.hpp  load_shader.hpp  wgpu_helpers.cpp  wgpu_helpers.hpp
src/webgpu/pipelines/: IndexedTrianglePipeline.cpp  IndexedTrianglePipeline.hpp  ObjectPipeline.hpp  Pipeline.hpp  TexturedTrianglePipeline.cpp  TexturedTrianglePipeline.hpp  TrianglePipeline.cpp  TrianglePipeline.hpp  VoxelPipeline.cpp  VoxelPipeline.hpp  WavesPipeline.cpp  WavesPipeline.hpp
src/webgpu/primitives/buffers/: AttributeBuffer.cpp  AttributeBuffer.hpp  AttributeStructs.hpp  Buffer.cpp  Buffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp
src/webgpu/primitives/buffers/attributes/: AttributeBuffer.hpp  IndexedAttribute.cpp  IndexedAttribute.hpp  NonTexturedAttribute.cpp  NonTexturedAttribute.hpp  TexturedAttribute.cpp  TexturedAttribute.hpp
src/webgpu/primitives/buffers/uniforms/: ColorUniform.cpp  ColorUniform.hpp  LightingUniform.cpp  LightingUniform.hpp  ModelMatrixUniform.cpp  ModelMatrixUniform.hpp  ScalarUniform.cpp  ScalarUniform.hpp  UniformModel.cpp  UniformModel.hpp  UniformStructs.hpp  UniformViewProjection.cpp  UniformViewProjection.hpp  ViewProjMatrixUniform.cpp  ViewProjMatrixUniform.hpp
src/webgpu/primitives/shaders/: BindGroupsLayouts.cpp  BindGroupsLayouts.hpp  ColoredShader.cpp  ColoredShader.hpp  Shader.hpp  TexturedShader.cpp  TexturedShader.hpp  VoxelShader.cpp  VoxelShader.hpp  WavesShader.cpp  WavesShader.hpp  load_shader.cpp  load_shader.hpp
src/webgpu/primitives/textures/: CharColorTexture.hpp  Texture2D.cpp  Texture2D.hpp  TextureCreator.hpp  TextureData.hpp  TextureSampler.hpp  TextureView.hpp  WavesDataTexture.hpp
src/webgpu/primitives/textures/utilities/: mips.cpp  mips.hpp
src/webgpu/primitives/uniforms/: BufferUniform.hpp  ColorUniform.cpp  ColorUniform.hpp  LightingUniform.cpp  LightingUniform.hpp  ModelMatrixUniform.cpp  ModelMatrixUniform.hpp  ScalarUniform.cpp  ScalarUniform.hpp  TextureUniforms.hpp  Uniform.hpp  UniformStructs.hpp  ViewProjMatrixUniform.cpp  ViewProjMatrixUniform.hpp
